--- a/analysis/interactive.Rmd
+++ b/analysis/interactive.Rmd
@@ -158,7 +158,7 @@ deployApp(appDir = "shiny/sample", appName = "HT_KDR", appTitle = "HT_KDR", laun
 Allocate more memory to the iSEE application:
 
 ```{r}
-configureApp(appName = "HT_KDR", appDir = "shiny/sample", size = "xxlarge")
+configureApp(appName = "HT_KDR", appDir = "shiny/sample", size = "xlarge")
 ```
 
 ## Summary
